[package]
edition = "2021"
name = "simple_unsafe_uuid"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.4"

[[bench]]
harness = false
name = "benchmark"
