[package]
authors = ["JN.X <xyanyue@gmail.com>"]
description = "Extension of uuid generation based on snowflake algorithm and implementation of ID to string conversion"
edition = "2021"
keywords = ["uuid", "id2str", "SnowFlake"]
license = "BSD-3-Clause"
name = "UUID_extend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
rand = "0.8.5"

[dev-dependencies]
criterion = {version = "0.4", features = ["html_reports"]}

[[bench]]
harness = false
name = "benchmark"
